	* new range of AgsSF2Synth WAV 1 - octave control from -12.0 to 12.0
	* new range of AgsSFZSynth WAV 1 - octave control from -12.0 to 12.0
	* implemented provide system time to ags-fx-vst3
	* implemented ags_soundcard_util_calc_system_time()
	* implemented ags_soundcard_util_calc_time_samples()
	* implemented ags_soundcard_util_calc_time_samples_absolute()
	* extended libags_vst API reference manual
	* modified -xc++ of gsequencer_CPPFLAGS and midi2xml_CPPFLAGS
	* modified -std= from gnu++2a to gnu99
	* refactored template variable and field names of some files
	* refactored enumerated types as function arguments
	* fixed typo in ags_core_audio_devout.h and ags_core_audio_devin.h
	* fixed usage of GtkCheckButton get active
	* fixed midi2xml
	* removed symbols ags_audio_unit_server_test_flags(), ags_audio_unit_server_set_flags() and ags_audio_unit_server_unset_flags()
	* removed symbols ags_core_audio_server_test_flags(), ags_core_audio_server_set_flags() and ags_core_audio_server_unset_flags()
	* removed symbols ags_gstreamer_server_test_flags(), ags_gstreamer_server_set_flags() and ags_gstreamer_server_unset_flags()
	* removed symbols ags_pulse_server_test_flags(), ags_pulse_server_set_flags() and ags_pulse_server_unset_flags()
	* removed symbols ags_jack_server_test_flags(), ags_jack_server_set_flags() and ags_jack_server_unset_flags()
	* minor improvements

ags (4.5.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* introduced api-pdf automake target

ags (4.5.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wrong type check in AgsSFZSynthUtil
	* implemented ags_pad_reset_flags()
	* implemented ags_ui_enums.c
	* fixed ags_lv2_turtle_scanner.c memory corruption
	* fixed ags_complex_get() return value
	* fixed ags_complex_get_term() and ags_complex_set_term() gtk-doc function
	* fixed ags_vst3_manager_load_file() w32 related plugin_so handle broken reference
	* fixed ags_vst3_manager.c missing usage of G_DIR_SEPARATOR
