@@ -124,6 +124,15 @@ ags_mixer_input_line_init(AgsMixerInputLine *mixer_input_line)
   AgsLineMember *line_member;
   GtkWidget *widget;
 
+  AgsApplicationContext *application_context;   
+
+  gdouble gui_scale_factor;
+  
+  application_context = ags_application_context_get_instance();
+
+  /* scale factor */
+  gui_scale_factor = ags_ui_provider_get_gui_scale_factor(AGS_UI_PROVIDER(application_context));
+
   /* volume indicator */
   line_member =
     mixer_input_line->volume_indicator = (AgsLineMember *) g_object_new(AGS_TYPE_LINE_MEMBER,
@@ -144,11 +153,16 @@ ags_mixer_input_line_init(AgsMixerInputLine *mixer_input_line)
   widget = ags_line_member_get_widget(line_member);  
 
   ags_indicator_set_segment_width(widget,
-				  20);
+				  (gint) (gui_scale_factor * 20.0));
   ags_indicator_set_segment_height(widget,
-				   (AGS_MIXER_INPUT_LINE_SCALE_HEIGHT - 20) / 10);
+				   (gint) (gui_scale_factor * ((gdouble) AGS_MIXER_INPUT_LINE_SCALE_HEIGHT - 28.0) / 10.0));
   ags_indicator_set_segment_padding(widget,
-				    2);
+				    (gint) (gui_scale_factor * 2));
+
+  gtk_widget_set_margin_top(widget,
+			    4);
+  gtk_widget_set_margin_bottom(widget,
+			       4);
 
   AGS_LINE(mixer_input_line)->indicator = widget;
   
@@ -174,7 +188,7 @@ ags_mixer_input_line_init(AgsMixerInputLine *mixer_input_line)
   widget = ags_line_member_get_widget(line_member);
 
   gtk_widget_set_size_request(widget,
-			      -1, AGS_MIXER_INPUT_LINE_SCALE_HEIGHT);
+			      -1, (gint) (gui_scale_factor * (gdouble) AGS_MIXER_INPUT_LINE_SCALE_HEIGHT));
   
   gtk_scale_set_digits(GTK_SCALE(widget),
 		       3);
