@@ -7,6 +7,7 @@ ags (5.0.0)
 	* implemented ags_soundcard_util_calc_system_time()
 	* implemented ags_soundcard_util_calc_time_samples()
 	* implemented ags_soundcard_util_calc_time_samples_absolute()
+	* improved AgsEnvelopeDialog queue draw
 	* extended libags_vst API reference manual
 	* modified -xc++ of gsequencer_CPPFLAGS and midi2xml_CPPFLAGS
 	* modified -std= from gnu++2a to gnu99
